ex-1.8./manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: app
          image: markfeher/todo-app:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
