ex-1.8./manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
